[gd_scene load_steps=29 format=2]

[ext_resource path="res://arkanoid/paddle_02.png" type="Texture" id=1]
[ext_resource path="res://arkanoid/arkanoid_scene.gd" type="Script" id=2]
[ext_resource path="res://arkanoid/ballRed_00.png" type="Texture" id=3]
[ext_resource path="res://arkanoid/Ball.gd" type="Script" id=4]
[ext_resource path="res://arkanoid/particleYellow_1.png" type="Texture" id=5]
[ext_resource path="res://arkanoid/Mission Plausible.ogg" type="AudioStream" id=6]
[ext_resource path="res://arkanoid/quote1.wav" type="AudioStream" id=7]
[ext_resource path="res://resources/Kenney Future.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://arkanoid/pattern65.png" type="Texture" id=10]
[ext_resource path="res://arkanoid/creeps.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 320, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 37.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 1785.72 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 348.389, 6606.07 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 672.825, 1785.72 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 4793.78, 3162.79 )

[sub_resource type="CanvasItemMaterial" id=7]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=8]
offsets = PoolRealArray( 0, 0.785185, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=9]
gradient = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 60.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
angular_velocity = 720.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 1000.0
tangential_accel_random = 1.0
damping = 100.0
angle = 720.0
angle_random = 1.0
scale = 0.2
scale_random = 0.2
color_ramp = SubResource( 9 )
hue_variation = 0.08
hue_variation_random = 0.34
anim_speed = 2.0
anim_speed_random = 1.0
anim_offset = 1.0
anim_offset_random = 1.0

[sub_resource type="Shader" id=11]
code = "shader_type canvas_item;

void fragment() {
	vec2 coord = SCREEN_UV;
	coord.x = mod(coord.x + sin(UV.y * 10.0 + TIME) * 0.1, 1.0);
	
	vec4 color = textureLod(SCREEN_TEXTURE, coord, 0.1);
	color.r *= 0.8;
	color.g = color.g * 0.5 + abs(sin(TIME * 4.0)) * 0.5;
	color.b *= 0.6;
	COLOR = color;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=12]
shader = SubResource( 11 )

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform sampler2D tex;

float rand(vec2 co){
    return fract(sin(dot(co.xy,vec2(12.9898,78.233))) * 43758.5453);
}

void fragment() {
	vec2 coord = SCREEN_UV;
	coord.y = mod(coord.y + sin(UV.x * 30.0 + TIME) * 0.005, 1.0);
	
	coord.x += fract(rand(vec2(TIME, UV.y))) * 0.01;
	
	vec4 color = textureLod(SCREEN_TEXTURE, coord, 0.1);
	color.r *= 0.2;
	color.g = 0.0;
	color.b *= 0.6;
	
	color.rgb -= texture(tex, UV).rgb * (sin(TIME) + 1.0) * 0.1;
	
	COLOR = color;
}"
custom_defines = ""

[sub_resource type="ShaderMaterial" id=14]
shader = SubResource( 13 )
shader_param/tex = ExtResource( 11 )

[sub_resource type="DynamicFont" id=15]
size = 50
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=16]
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Label:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.5, 2.5, 3.5, 4.5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 27.7663, -27.8, 27.7663, -27.8, 27.7663, -27.8, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.666667, 1, 0, 1 ), Color( 0, 1, 0.94902, 1 ), Color( 0, 0.2, 1, 1 ), Color( 1, 0, 0.933333, 1 ), Color( 1, 0, 0.0156863, 1 ), Color( 0.74902, 1, 0, 1 ), Color( 0, 0.45098, 1, 1 ), Color( 1, 0, 0.368627, 1 ), Color( 1, 0.415686, 0, 1 ), Color( 0.882353, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Label:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="DynamicFont" id=17]
size = 30
font_data = ExtResource( 8 )

[sub_resource type="GDScript" id=18]
script/source = "extends Sprite

func _process(delta: float) -> void:
	region_rect.position += Vector2.ONE * 100 * delta
"

[node name="Arkanoid" type="Node2D"]
script = ExtResource( 2 )

[node name="PaddleLine" type="Line2D" parent="."]
visible = false
position = Vector2( -2453.14, 1542.55 )
rotation = 0.471239
points = PoolVector2Array( 0, 0, 2048, 0 )

[node name="Paddle" type="StaticBody2D" parent="."]
position = Vector2( -1540.75, 2007.44 )
rotation = 0.471239

[node name="CollisionShape2D" type="CollisionShape2D" parent="Paddle"]
shape = SubResource( 1 )

[node name="CameraHere" type="Node2D" parent="Paddle"]

[node name="paddle_02" type="Sprite" parent="Paddle"]
scale = Vector2( 1, 0.2 )
texture = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Paddle"]
stream = ExtResource( 7 )
autoplay = true

[node name="Ball" type="KinematicBody2D" parent="." groups=[
"balls",
]]
position = Vector2( -1509.25, 1953.94 )
rotation = 0.471239
z_index = 1
collision_layer = 0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="Ball"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="Wall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Wall"]
position = Vector2( 1796.53, 2035.16 )
rotation = 1.1069
shape = SubResource( 3 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Wall"]
position = Vector2( 1794.12, 429.983 )
rotation = -1.10541
shape = SubResource( 3 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Wall"]
position = Vector2( -1328.18, 459.629 )
rotation = 1.1069
shape = SubResource( 3 )

[node name="Dead" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Dead"]
position = Vector2( -1968.91, 2556.16 )
rotation = -1.10541
shape = SubResource( 4 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Dead"]
position = Vector2( 2886.2, 2841.55 )
rotation = -2.21701
shape = SubResource( 5 )

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Dead"]
position = Vector2( 7457.92, 4162.27 )
rotation = 2.25939
shape = SubResource( 6 )

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Dead"]
position = Vector2( -5673.06, -4346.2 )
rotation = 2.25939
shape = SubResource( 6 )

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Dead"]
position = Vector2( 4009.82, -4117.62 )
rotation = -2.5076
shape = SubResource( 6 )

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Dead"]
position = Vector2( 3357.96, 163.419 )
rotation = -4.07936
shape = SubResource( 5 )

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Dead"]
position = Vector2( 73.4741, -1105.25 )
rotation = 1.52484
shape = SubResource( 5 )

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Dead"]
position = Vector2( -3209.3, 175.143 )
rotation = -5.0183
shape = SubResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
material = SubResource( 7 )
position = Vector2( -2608.01, 775.91 )
emitting = false
amount = 100
one_shot = true
explosiveness = 1.0
process_material = SubResource( 10 )
texture = ExtResource( 5 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 6 )
volume_db = -10.0
autoplay = true
bus = "Music"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource( 12 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource( 14 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -460.0
margin_top = -28.0
margin_right = 461.0
margin_bottom = 29.0
grow_horizontal = 2
rect_pivot_offset = Vector2( 460, 28 )
custom_fonts/font = SubResource( 15 )
text = "POWERUP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
playback_speed = 8.0
anims/POWERUP = SubResource( 16 )

[node name="Score" type="Label" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 17 )
text = "SCORE 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score2" type="Label" parent="CanvasLayer"]
margin_top = 35.0
margin_right = 158.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 17 )
text = "LIFES 100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 339.411, 67.8823 )
z_index = -1000
texture = ExtResource( 10 )
region_enabled = true
region_rect = Rect2( 0, 0, 10000, 10000 )
script = SubResource( 18 )
[connection signal="body_entered" from="Dead" to="." method="_on_Dead_body_entered"]
